<resources>
    <string name="app_name">Hero TODO</string>
    <string name="text_welcome">Witaj.</string>
    <string name="text_option">Opcje</string>
    <string name="text_help">Pomoc</string>
    <string name="text_add">Dodaj zadanie</string>
    <string name="text_statistics">Statystyki</string>
    <string name="text_classNoChoose">Człowiek: </string>
    <string name="native_zeroLevel">0 poziom</string>
    <string name="text_level">poziom</string>
    <string name="text_experience">0/100PD</string>
    <string name="text_experienceEmpty">/100PD</string>
    <string name="text_reward">Nagroda:</string>
    <string name="text_sufix_experiencePoints">PD</string>
    <string name="text_experienceTogether">Doświadczenie: </string>
    <string name="text_repeatEvery">Powtarza się co </string>
    <string name="text_days">dni.</string>
    <string name="text_day">dzień.</string>
    <string name="text_interval">Interwał:</string>
    <string name="text_AVGExperiencePoints">Średnie punkty doświadczenia:</string>
    <string name="text_dateEnd">Data zakończenia:</string>
    <string name="text_descriptionQuest">Opis zadania:</string>
    <string name="text_allert_back">Kliknij jeszcze raz aby cofnąć.</string>
    <string name="text_correctField">Popraw czerwone pola.</string>
    <string name="text_questWasAdd">Zadanie zostało dodane.</string>
    <string name="text_questWasModify">Zadanie zostało zmodyfikowane.</string>
    <string name="text_selectClass">Wybierz klasę</string>
    <string name="text_accept">Akceptuj</string>
    <string name="text_selectedClass">Wybrano klasę</string>
    <string name="text_modify">Modyfikuj</string>
    <string name="text_delete">Usuń</string>
    <string name="text_confirm">Potwierdź</string>
    <string name="text_areYouSureDelete">Czy na pewno chcesz usunąć:</string>
    <string name="text_areYouSureThisClass">Czy na pewno chcesz wybrać klasę:</string>
    <string name="text_laterChangeIsNotPossible">Późniejsza zmiana nie jest możliwa.</string>
    <string name="text_firstChooseClass">Najpierw wybierz klasę.</string>
    <string name="text_restartClass">Zrestartuj klasę.</string>
    <string name="text_areYouSureRestart">Czy na pewno chcesz zrestartować klasę, a wraz z nią
    WSZYSTKIE postępy? (*zadania nie zostaną usunięte)</string>
    <string name="text_close">Zamknij</string>
    <string name="text_success">Brawo Bohaterze wypełniłeś swoje zadanie.</string>
    <string name="text_fail">Nie podołałeś zadaniu.</string>
    <string name="text_author">by Jarosław Skrzypczak</string>
    <string name="text_confirmDelete">Zadanie zostało usunięte.</string>
    <string name="text_colorTheme">Motyw kolorów:</string>
    <string name="text_tutorialHeader">Witaj Bohaterze</string>
    <string name="text_classInfo">Wybrana klasa to: </string>
    <string name="text_classInfo_noSelected">Nie wybrano klasy</string>
    <string name="text_optionInfo">Wszelkich zmian możesz dokonać w opcjach dostępnych po przejściu
    dalej. </string>
    <string name="text_helpInfo">W razie jakichkolwiek pytań proszę najpierw sprawdzić zakładkę
    Pomoc, jeśli to nie pomoże proszę spróbować metodą prób i błędów, w ostateczności można
    skontaktować się z programistą (nie zalecane).</string>
    <string name="text_continue">Przejdź dalej.</string>
    <string name="text_achievement">Osiągnięcia</string>
    <string name="text_successQuest">Zadania wykonane: </string>
    <string name="text_actual_seriesQuest">Aktualna seria zadań:</string>
    <string name="text_failedQuest">Zadania nie wykonane:</string>
    <string name="text_maxSeries">Największa seria zadań:</string>
    <string name="text_reachAchievement">Zdobyto osiągnięcie: </string>
    <string name="notification_daily">Pora przejrzeć zadania na dzisiaj.</string>
    <string name="notification_achiev">Zdobyto osiągnięcie.</string>
    <string name="text_errorDatabase">Błąd bazy danych.</string>
    <string name="text_history">Historia</string>
    <string name="text_dateQuestEnd">Końcowa data zadania:</string>
    <string name="help_aboutApp">O aplikacji</string>
    <string name="category_description_aboutApp">Aplikacja powstała, aby trochę urozmaicić nudne
        listy TODO, których pełno w sieci. Czy spełni swoje zadanie ? Mam nadzieje. Głównym celem
        jest choć troszeczkę zgrywalizować to nudne życie. Aplikacja pozwala zobrazować to kim
        jesteśmy, jakie mamy ogólne cechy charakteru. Nie jest żadnym testem psychologicznym,
        zatem wszystkie zawarte tutaj informacje należy traktować półżartem. Statystyki z dużym
        prawdopodobieństwem nie odwzorują rzeczywistości, chyba że użytkownik naprawdę się postara,
        a każda jego decyzja będzie przemyślana (w co powiątpiewam, jesteśmy tylko ludźmi).</string>
    <string name="help_aboutMe">O mnie</string>
    <string name="category_description_aboutMe">Mam na imię Jarek, jestem studentem informatyki.
        Interesuję się wieloma dziedzinami. Staram się ciągle rozwijać i być otwartym na nowe
        doświadczenia. Interesuję się informatyką, fizyką (szczegónie astronomią), psychologią,
        człowiekiem (od anatomi do działania mózgu). Lubię czytać (szczególnie fantastykę),
        jeździć na rowerze, pokopać czy pouderzać piłkę grając w piłkę nożną, czy siatkówkę
        (ciężko to nazwać grą), gram na gitarze (głównie dla siebie brzdąkam), coś tam pogram na
        komputerze (choć czasu mało). Cech podawać nie będę, jestem przecież leniwym informatykiem.
        To by było na tyle o mnie. Twórca ze mnie marny, czasem przyjdą do głowy głupie pomysły,
        mam nadzieje, że ta aplikacja nie jest jednym z nich. Na koniec jeszczę dopiszę, że lubię
        pisać, nie tylko kody, co chyba już zauważyłeś drogi użytkowniku.</string>
    <string name="help_category_start">Od czego zacząć?</string>
    <string name="category_description_start">Swoją przygodę najlepiej rozpocząć od wybrania klasy.
    Klasę można wybrać wchodząc w opcje. Jeśli tego nie wykonasz, to całe doświadczenie, które
    zdobędziesz poprzez wykonywanie zadań przepadnie.</string>
    <string name="help_category_addQuest">Jak dodać zadanie?</string>
    <string name="category_description_addQuest">Aby dodać zadanie należy z menu górnego paska wybrać pole
    "Dodaj", a następnie wypełnić wszystkie pola danymi. W razie problemów z danymi odpowiednie
    pola będą wymagać korekcji.</string>
    <string name="help_category_class">Co to są klasy?</string>
    <string name="category_description_class">Klasa to rodzaj kategorii postaci. Charakteryzuje
        postać, określa jej słabe i silne strony. Klasę można utożsamiać z przynależnością do grupy
        społecznej, bądź cechu.</string>
    <string name="help_category_statistics">Co to są statystyki?</string>
    <string name="category_description_statistics">Statystyki takie jak np. siła, inteligencja,
        określają w sposób prosty, liczbowy poziom zaawansowania cechy bohatera. Ogólnie przyjęte
        jest, że ludzie potrafią się rozwijać. Znane są przypadki cofania się w rozwoju, przeważnie
        mężczyzn. Aplikacja jednak nie przewiduje takiej możliwości.</string>
    <string name="help_category_whenQuestEnd">Kiedy zadanie się kończy?</string>
    <string name="category_description_whenQuestEnd">Zadanie kończy się w momencie wciśnięcia
        przycisku powodzenia lub niepowodzenia. Przycisk powodzenia można wcisnąć tylko do dnia
        zakończenia zadania (włącznie). Po przekroczeniu wspomnianej daty można wcisnąć tylko
        przycisk niepowodzienia. Zadanie pojawi się ponownie z nową datą zakończenia jeśli jest
        powtarzalne.</string>
    <string name="help_category_experience">Jak przydzielane jest doświadczenie?</string>
    <string name="category_description_experience">Każde zadanie posiada nagrodę w postaci
        doświadczenia. Ilość punktów doświadczenia przydzielana jest każdemu atrybutowi (z zadania)
        postaci w tej samej ilości. Co za tym idzie, jeśli chcesz szybko się rozwinąć ustawiaj
        maksymalną pulę doświadczenia i wszystkie atrybuty. Zyskasz znacznie więcej doświadczenia.
        Herosowi jednak nie wypada oszukiwać.</string>
    <string name="help_category_hexGraph">O co chodzi z tym sześciokątnym wykresem?</string>
    <string name="category_description_hexGraph">Wykres ten przedstawia statystyki. Pokazuje
        proporcje między konkretnymi atrybutami. Pozwala na pierwszy rzut oka stwierdzić kierunek
        rozwoju bohatera. Wykres jest sześciokątny, ponieważ jest 6 statystyk. Prawdziwym powodem
        tego wykresu jest widzimisie twórcy, ale o tym nikt nie musi wiedzieć.</string>
    <string name="help_category_level">Dlaczego mój poziom jest większy, niż wychodzi ze średniej
        arytmetycznej statystyk?</string>
    <string name="category_description_level">Poziom bohatera jest przeliczany według mnożników
        statystyk. Każda klasa posiada własny zestaw mnożników specyficzny tylko dla tej klasy.
        Mnożniki są odwzorowaniem ogólnego (nie koniecznie obieranego) kierunku rozwoju klasy.
        Mnożniki są schowane przed użytkownikiem, odszyfrowanie ich nie jest trudne, jeśli
        użytkownik znajdzie odpowiedni sposób.</string>
    <string name="help_category_strength">Statystyka: Siła</string>
    <string name="category_description_strength">Siła stanowi odwzorowanie sprawności
        fizycznej bohatera. Bohater silny jest w stanie z łatwością mierzyć się z przeciwnikami,
        stawi czoła każdej bestii oraz da radę otworzyć każdy słoik. </string>
    <string name="help_category_endurance">Statystyka: Wytrzymałość</string>
    <string name="category_description_endurance">Wytrzymałość przedstawia jak nasz bohater jest
        odporny na ból, na przeciwności losu. Atrybut pokazuje wytrwałość w dążeniu do celu,
        oraz kondycje bohatera. Nie można zaniedbywać tego atrybutu. Nikt nie lubi herosa, który
        szybko odpuszcza.</string>
    <string name="help_category_dexterity">Statystyka: Zręczność</string>
    <string name="category_description_dexterity">Zręczność to umiejętności manualne, posługiwanie
        się swoim ciałem, ogólna giętkość, umiejętność utrzymywania równowagi oraz balansowania
        ciałem. Wyższy poziom tej statystyki może umożliwić zadziwienie grona znajomych sztuczkami
        karcianymi, bądź zaimponować płci pięknej grą na instrumencie.</string>
    <string name="help_category_intelligence">Statystyka: Inteligencja</string>
    <string name="category_description_intelligence">Inteligencja atrybut przedstawiający jak nasz
        bohater jest rozwinięty umysłowo. Zdolność łączenia zdobytych informacji, umiejętność
        skupiania się, chęć zdobywania nowej wiedzy. Czasami zdarza się również, że heros z
        rozwiniętym atrybutem inteligencji posiada poczucie humoru.</string>
    <string name="help_category_wisdom">Statystyka: Wiedza</string>
    <string name="category_description_wisdom">Wiedza to atrubut przedstawiajacy poziom w jakim
        bohater opanował tajniki ksiąg bibliotek świata. Obrazuje jaki zasób wiedzy heros posiada.
        Wiedzy potrzebnej do przetrwania, do niesienia pomocy, ale różnież wiedzy niekoniecznie
        potrzebnej, którą może zabłysnąć w towarzystwie np. spektrum widzenia ustonogów.</string>
    <string name="hint_dateFormat">dd-MM-yyyy</string>
    <string name="hint_noEnable">Nie dostępne</string>
    <string name="text_difficultyLevel">Poziom trudności:</string>
    <string name="text_repeatable">Powtarzalne:</string>
    <string name="text_no">NIE</string>
    <string name="text_attribute">Atrybuty:</string>
    <string name="attribute_strength">Siła</string>
    <string name="attribute_endurance">Wytrzymałość</string>
    <string name="attribute_intelligence">Inteligencja</string>
    <string name="attribute_wisdom">Mądrość</string>
    <string name="attribute_dexterity">Zręczność</string>
    <string name="attribute_charisma">Charyzma</string>
</resources>